--- a/src/main/resources/public/app/views/diablo3.html
+++ b/src/main/resources/public/app/views/diablo3.html
@@ -16,11 +16,13 @@
             {{error}}
         </div>
     </div>
-    <div class=" gear-wrapper inline">
-        <div ng-if="battlenet && !error" ng-repeat="hero in battlenet.heroes">
-            <button class="btn btn-dark btn-sm add-all-margin inline" ng-click="heroLookup(id, hero.id)">{{hero.name}}</button>
-        </div>
+    <div class="gear-wrapper" ng-if="battlenet && !error">
+        <div class="block">
+            <div class="inline" ng-repeat="hero in battlenet.heroes">
+                <button class="btn btn-dark btn-sm add-all-margin inline" ng-click="heroLookup(id, hero.id)">{{hero.name}}</button>
+            </div>
 
+        </div>
         <div ng-if="heroInfo" class=" inline">
             <div class="pvp">
                 <table class=table>
@@ -67,58 +69,143 @@
                             <td>{{heroInfo.stats.armor}}</td>
                         </tr>
 
-                           <tr>
+                        <tr>
                             <td>Attack Speed: </td>
                             <td>{{heroInfo.stats.attackSpeed}}</td>
                         </tr>
-                           <tr>
+                        <tr>
                             <td>Block Chance: </td>
                             <td>{{heroInfo.stats.blockChance}}</td>
                         </tr>
-                           <tr>
+                        <tr>
                             <td>Cold Resist: </td>
                             <td>{{heroInfo.stats.coldResist}}</td>
                         </tr>
-                           <tr>
+                        <tr>
                             <td>Crit Chance: </td>
                             <td>{{heroInfo.stats.critChance}}</td>
-                        
+
                         </tr>
-                           <tr>
+                        <tr>
                             <td>Crit Damage: </td>
                             <td>{{heroInfo.stats.critDamage}}</td>
                         </tr>
-                           <tr>
+                        <tr>
                             <td>Damage: </td>
                             <td>{{heroInfo.stats.damage}}</td>
                         </tr>
-                           <tr>
+                        <tr>
                             <td>Dexterity: </td>
                             <td>{{heroInfo.stats.dexterity}}</td>
                         </tr>
-                          <tr>
+                        <tr>
                             <td>Fire Resist: </td>
                             <td>{{heroInfo.stats.fireResist}}</td>
                         </tr>
-                              <tr>
+                        <tr>
                             <td>Intelligence: </td>
                             <td>{{heroInfo.stats.intelligence}}</td>
                         </tr>
-                             <tr>
+                        <tr>
                             <td>Health: </td>
                             <td>{{heroInfo.stats.life}}</td>
                         </tr>
-                             <tr>
+                        <tr>
                             <td>Strength: </td>
                             <td>{{heroInfo.stats.strength}}</td>
                         </tr>
-                             <tr>
+                        <tr>
                             <td>Lighting Resist: </td>
                             <td>{{heroInfo.stats.lightningResist}}</td>
                         </tr>
-                           <tr>
+                        <tr>
                             <td>Vitality: </td>
                             <td>{{heroInfo.stats.vitality}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+        <div ng-if="heroInfo" class=" inline">
+            <div class="pvp">
+                <table class=table>
+                    <tbody>
+
+
+                        <div class="center-this-text"> {{heroInfo.name}}'s Skills</div>
+                        <tr>
+                            <td>Active Skills</td>
+                            <td></td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.active[0].skill.name">
+                            <td><img src = "http://media.blizzard.com/d3/icons/skills/64/{{heroInfo.skills.active[0].skill.icon}}.png" class = "smallIcon"> <a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[0].skill.description}}"> {{heroInfo.skills.active[0].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[0].skill.level}}</td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.active[0].skill.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[0].rune.description}}">Rune {{heroInfo.skills.active[0].rune.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[0].rune.level}}</td>
+                        </tr>
+
+                        <tr ng-show="heroInfo.skills.active[1].skill.name">
+                            <td><img src = "http://media.blizzard.com/d3/icons/skills/64/{{heroInfo.skills.active[1].skill.icon}}.png" class = "smallIcon"><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[1].skill.description}}"> {{heroInfo.skills.active[1].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[1].skill.level}}</td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.active[1].skill.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[1].rune.description}}">Rune {{heroInfo.skills.active[1].rune.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[1].rune.level}}</td>
+                        </tr>
+
+                        <tr ng-show="heroInfo.skills.active[2].skill.name">
+                            <td><img src = "http://media.blizzard.com/d3/icons/skills/64/{{heroInfo.skills.active[2].skill.icon}}.png" class = "smallIcon"><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[2].skill.description}}"> {{heroInfo.skills.active[2].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[2].skill.level}}</td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.active[2].skill.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[2].rune.description}}">Rune {{heroInfo.skills.active[2].rune.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[2].rune.level}}</td>
+                        </tr>
+
+                        <tr ng-show="heroInfo.skills.active[3].skill.name">
+                            <td><img src = "http://media.blizzard.com/d3/icons/skills/64/{{heroInfo.skills.active[3].skill.icon}}.png" class = "smallIcon"><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[3].skill.description}}"> {{heroInfo.skills.active[3].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[3].skill.level}}</td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.active[3].skill.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[3].rune.description}}">Rune {{heroInfo.skills.active[3].rune.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[3].rune.level}}</td>
+                        </tr>
+
+                        <tr ng-show="heroInfo.skills.active[4].skill.name">
+                            <td><img src = "http://media.blizzard.com/d3/icons/skills/64/{{heroInfo.skills.active[4].skill.icon}}.png" class = "smallIcon"><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[4].skill.description}}"> {{heroInfo.skills.active[4].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[4].skill.level}}</td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.active[4].rune.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[4].rune.description}}">Rune {{heroInfo.skills.active[4].rune.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[4].rune.level}}</td>
+                        </tr>
+
+                        <tr ng-show="heroInfo.skills.active[5].skill.name">
+                            <td><img src = "http://media.blizzard.com/d3/icons/skills/64/{{heroInfo.skills.active[4].skill.icon}}.png" class = "smallIcon"><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[5].skill.description}}"> {{heroInfo.skills.active[5].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[5].skill.level}}</td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.active[5].rune.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.active[5].rune.description}}">Rune {{heroInfo.skills.active[5].rune.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.active[5].rune.level}}</td>
+                        </tr>
+                        <tr>
+                            <td >Passive Skills</td>
+                            <td></td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.passive[0].skill.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.passive[0].skill.description}}"> {{heroInfo.skills.passive[0].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.passive[0].skill.level}}</td>
+                        </tr>
+                        <tr ng-show="heroInfo.skills.passive[1].skill.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.passive[1].skill.description}}"> {{heroInfo.skills.passive[1].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.passive[1].skill.level}}</td>
+                        </tr>
+                                <tr ng-show="heroInfo.skills.passive[2].skill.name">
+                            <td><a href="#" data-toggle="tooltip" title="{{heroInfo.skills.passive[2].skill.description}}"> {{heroInfo.skills.passive[2].skill.name}} Level: </a></td>
+                            <td>{{heroInfo.skills.passive[2].skill.level}}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -128,7 +215,7 @@
     </div>
 
     <div ng-if="battlenet && !error" class="gear-wrapper">
-        <div class="pvp">
+        <div class="pvp inline">
             <table class="table">
                 <tbody>
 
@@ -163,44 +250,44 @@
                     </tr>
                 </tbody>
             </table>
-
-        </div>
-        <div ng-if="battlenet" class="gear-wrapper inline">
-            <div class="pvp">
-                <table class=table>
-                    <tbody>
-
-
-                        <div class="center-this-text"> Acts Cleared</div>
-                        <tr>
-                            <td>Act I: </td>
-                            <td>{{battlenet.progression.act1}}</td>
-                        </tr>
-                        <tr>
-                            <td>Act II: </td>
-                            <td>{{battlenet.progression.act2}}</td>
-                        </tr>
-                        <tr>
-                            <td>Act III: </td>
-                            <td>{{battlenet.progression.act3}}</td>
-                        </tr>
-                        <tr>
-                            <td>Act IV: </td>
-                            <td>{{battlenet.progression.act4}}</td>
-                        </tr>
-                        <tr>
-                            <td>Act V: </td>
-                            <td>{{battlenet.progression.act5}}</td>
-                        </tr>
-
-                    </tbody>
-                </table>
-
-            </div>
         </div>
 
 
+        <div class="pvp inline">
+            <table class=table>
+                <tbody>
 
 
+                    <div class="center-this-text"> Acts Cleared</div>
+                    <tr>
+                        <td>Act I: </td>
+                        <td>{{battlenet.progression.act1}}</td>
+                    </tr>
+                    <tr>
+                        <td>Act II: </td>
+                        <td>{{battlenet.progression.act2}}</td>
+                    </tr>
+                    <tr>
+                        <td>Act III: </td>
+                        <td>{{battlenet.progression.act3}}</td>
+                    </tr>
+                    <tr>
+                        <td>Act IV: </td>
+                        <td>{{battlenet.progression.act4}}</td>
+                    </tr>
+                    <tr>
+                        <td>Act V: </td>
+                        <td>{{battlenet.progression.act5}}</td>
+                    </tr>
 
+                </tbody>
+            </table>
+
+        </div>
     </div>
+
+
+
+
+
+</div>
