--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -1,6 +1,6 @@
 .background {
     /*background-image: url('http://c2gmusichall.com/wp-content/uploads/2014/08/backgrounds-that-work-well-with-shadygamer-shadygamer.jpg');*/
-    background-color: #28a4c9;
+    background-color: white
     background-size: cover;
     width: 100%;
 }
@@ -213,7 +213,7 @@ hr.small {
     display: table;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100px;
     background: url(../images/space-bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -227,10 +227,13 @@ hr.small {
 .news {
     padding: 50px 0;
     font-size: 20pt;
+    /*color: #28a4c9;*/
+    color: #3366FF;
 }
 
 .about {
     padding: 50px 0;
+    color: #3366FF;
 }
 
 
@@ -238,7 +241,7 @@ hr.small {
 
 .services {
     padding: 50px 0;
-    color: white;
+    color: #3366FF;
 }
 
 .service-item {
@@ -265,6 +268,7 @@ hr.small {
 
 .portfolio {
     padding: 50px 0;
+    color: #3366FF;
 }
 
 .portfolio-item {
@@ -361,7 +365,6 @@ footer {
 .add-all-margin{
  margin: 10px 10px 10px 10px;
 }
-
 .edit {
     padding-top: 7px;
     margin-right: 18px;
@@ -419,4 +422,7 @@ footer {
 }
 .center-this-text{
     text-align: center
+}
+.img-resize{
+ margin-left: 59%;   
 }
